# depstree

./: .gitignore  README.md  pyproject.toml
depstree/: __init__.py  analyzer.py  cli.py  exporters.py  models.py  parsers.py  render.py
tests/: test_requirements_diff.py
