[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "depstree"
version = "0.1.1"
description = "Dependency analyzer for Python, Node, Rust, Go, Java, Ruby, and PHP projects."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "shazeus", email = "efeborazan07@gmail.com" }
]
keywords = ["dependencies", "cli", "supply-chain", "audit", "sbom", "graph"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: System :: Software Distribution"
]
dependencies = [
  "certifi>=2024.8.30",
  "click>=8.1",
  "rich>=13.7",
  "packaging>=23.0",
  "tomli>=2.0; python_version < '3.11'"
]

[project.scripts]
depstree = "depstree.cli:main"

[project.urls]
Homepage = "https://github.com/shazeus/depstree"
Repository = "https://github.com/shazeus/depstree"
Issues = "https://github.com/shazeus/depstree/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["depstree"]
